# xor

./: .gitignore  README.md  pyproject.toml  requirements.txt  xor_demo.py
tests/: test_data.py  test_models.py  test_plots.py
xor_demo/: __init__.py  cli.py  config.py  data.py  models.py  plots.py
