[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xor-demo"
version = "0.1.0"
description = "XOR classification demo: linear vs non-linear models with plots"
readme = "README.md"
authors = [{ name = "Eitamar Saraf" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.22",
  "matplotlib>=3.6",
  "scikit-learn>=1.1",
]

[project.scripts]
xor-demo = "xor_demo.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "black>=24.3",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
